<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001D2B"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#001D2B"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"
        app:tabPaddingEnd="0dp"
        app:tabPaddingStart="0dp"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextColor="#BDBABA">

        <com.google.android.material.tabs.TabItem
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/home"
            android:id="@+id/home"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:tabPaddingEnd="0dp"
            app:tabTextColor="#BDBABA" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/contact"
            android:id="@+id/contact"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:tabPaddingEnd="0dp"
            app:tabTextColor="#BDBABA" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/qr_code"
            android:id="@+id/qr_code"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:tabPaddingEnd="0dp"
            app:tabTextColor="#BDBABA" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>